src/main/java/com/example/wineapi/global/error/GlobalExceptionHandler.java
package com.example.wineapi.global.error;

public class GlobalExceptionHandler {
}
